# AI_Project

./: README.md  pyproject.toml  seoyoung_mbti.py  seoyoung_word_relay.py
